--- a/DesignerRHN/DesignerRHN-war/web/Template.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Template.xhtml
@@ -28,7 +28,7 @@
                         <a href="https://www.nomina.com.co/soporte/descargas/file/43-teamviewer3.html" target="_blank">
                             <h:outputText value="#{controlTemplate.linkSoporte}" style="position: absolute; left: 1040px; top:9px; color: #0000FF; text-decoration: underline;"/>
                         </a>
-                        <p:separator id="separador1" style="position: absolute; top:25px; left: 0px; width:100%; height:8px; color: #0000FF; background-color: #0000FF; border-color: transparent; border-radius: 0px; box-shadow: none;"/>
+                        <p:separator id="separador1" style="position: absolute; top:25px; left: 0px; width:99.2%; height:8px; color: #0000FF; background-color: #0000FF; border-color: transparent; border-radius: 0px; box-shadow: none;"/>
                     </div>
                 </h:form>
             </ui:insert>
@@ -40,7 +40,7 @@
                         <tr>
                             <td align="center">
                                 <p:clock id="clock" pattern=" dd/MM/yyyy - HH:mm:ss" mode="server"/>
-                                <p:separator id="separador2" style="border-style: inset; position: relative; top: 11px;"/>
+                                <p:separator id="separador2" style="border-style: inset; position: relative; top: 11px; border-width: 1px; border-style: solid; color:#717171;"/>
                             </td>
                         </tr>
                         <tr>
@@ -68,12 +68,12 @@
                         <tr>
                             <td align="center">
                                 <h:outputText value="#{controlTemplate.nombreUsuario}" style="font-weight: bold;"/>
-                                <p:separator id="separador3" style="border-style: inset"/>
+                                <p:separator id="separador3" style="border-style: inset; border-width: 1px; border-style: solid; color:#717171;"/>
                             </td>
                         </tr>
                         <tr>
                             <td align="center">
-                                <p:commandButton value="Cerrar Sesión" actionListener="#{controlTemplate.cerrarSession()}" style="font-weight: bold;"/>
+                                <p:commandButton value="Cerrar Sesión" actionListener="#{controlTemplate.cerrarSession()}" styleClass="cssBotonCerrarSesion"/>
                             </td>
                         </tr>
                     </table>
