--- a/DesignerRHN/DesignerRHN-war/web/Legislacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Legislacion.xhtml
@@ -66,7 +66,7 @@
                                 <p:commandButton id="refrescar" value="" style="background-image: url(Imagenes/refrescar.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlLegislacion.refrescar()}" process="@this"/>  
                                 <p:tooltip  for="refrescar" value="#{msg['refrescar']}"/>
 
-                                <p:commandButton id="salir" value="" style="background-image: url(Imagenes/salir.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlLegislacion.cancelarSalir()}" action="#{controlLegislacion.redirigir()}" process="@this"/>  
+                                <p:commandButton id="salir" value="" style="background-image: url(Imagenes/salir.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlLegislacion.Salir()}" action="#{controlLegislacion.redirigir()}" process="@this"/>  
                                 <p:tooltip  for="salir" value="#{msg['salir']}"/>
 
                             </p:toolbarGroup>  
@@ -97,7 +97,7 @@
                                     </p:cellEditor>
                                 </p:column>  
 
-                                <p:column headerText="#{msg['descripcion']}"  sortBy="#{contrato.descripcion}" filterBy="#{contrato.descripcion}" filterMatchMode="contains"  id="columnaDescripción" width="300" filterStyle="display: none; visibility: hidden;" >      
+                                <p:column headerText="#{msg['descripcion']}"  sortBy="#{contrato.descripcion}" filterBy="#{contrato.descripcion}" filterMatchMode="contains"  id="columnaDescripción" width="300" filterStyle="display: none; visibility: hidden;" >
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{contrato.descripcion}" style="text-transform: uppercase" /></f:facet>  
                                         <f:facet name="input">
@@ -109,25 +109,34 @@
                                     </p:cellEditor>
                                 </p:column>
 
-                                <p:column headerText="#{msg['tipocotizante']}"  sortBy="#{contrato.tipocotizante.descripcion}" filterBy="#{contrato.tipocotizante.descripcion}" filterMatchMode="contains" id="columnaTipoCotizante" filterStyle="display: none; visibility: hidden;">                                                              
-                                    <p:cellEditor>   
-                                        <f:facet name="output"><h:outputText value="#{contrato.tipocotizante.descripcion}" style="text-transform: uppercase" /></f:facet>  
+                                <p:column headerText="#{msg['tipocotizante']}" sortBy="#{contrato.tipocotizante.descripcion}" 
+                                          filterBy="#{contrato.tipocotizante.descripcion}" filterMatchMode="contains"  id="columnaTipoCotizante" 
+                                          width="250" filterStyle="display: none; visibility: hidden;">    
+                                    <f:facet name="header"><h:outputText value="#{msg['tipocotizante']}"/></f:facet>
+                                    <p:cellEditor>  
+                                        <f:facet name="output"><h:outputText value="#{contrato.tipocotizante.descripcion}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{contrato.tipocotizante.descripcion}" style="border-radius: 0px; width: 99.5%; text-transform: uppercase" >
+                                            <p:inputText id="editorTipoCotizante" value="#{contrato.tipocotizante.descripcion}" style="border-radius: 0px; text-transform: uppercase; height: 12px;  width: 94%;">
                                                 <p:ajax event="change" listener="#{controlLegislacion.modificarContrato(indice, 'TIPOSCOTIZANTES', contrato.tipocotizante.descripcion)}"/>
                                                 <p:ajax event="select" listener="#{controlLegislacion.cambiarIndice(indice, 2)}" />
                                                 <p:ajax event="dblclick" listener="#{controlLegislacion.llamarDialogosLista(indice)}"/>
-                                            </p:inputText> 
+                                            </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
+
                                 </p:column>
 
                                 <p:column headerText="#{msg['estado']}" style="padding: 0px" sortBy="#{contrato.estado}" filterBy="#{contrato.estado}" filterMatchMode="contains" id="columnaEstado" width="100" filterStyle="display: none; visibility: hidden;" >
-                                    <p:selectOneMenu id="editarFechaAcumulado" value="#{contrato.estado}" style="font-weight: bold;width: 100px" >  
-                                        <f:selectItem itemLabel="#{msg['activo']}"  itemValue="ACTIVO" />  
-                                        <f:selectItem itemLabel="#{msg['inactivo']}"  itemValue="INACTIVO" />
-                                        <p:ajax listener="#{controlLegislacion.modificarContrato(indice, 'N', contrato.estado)}" update="@this" />
-                                    </p:selectOneMenu>
+                                    <p:cellEditor> 
+                                        <f:facet name="output"><h:outputText value="#{contrato.estado}"/></f:facet>  
+                                        <f:facet name="input">
+                                            <p:selectOneMenu id="editarFechaAcumulado" value="#{contrato.estado}" style="font-weight: bold;width: 100%" >  
+                                                <f:selectItem itemLabel="#{msg['activo']}"  itemValue="ACTIVO" />  
+                                                <f:selectItem itemLabel="#{msg['inactivo']}"  itemValue="INACTIVO" />
+                                                <p:ajax listener="#{controlLegislacion.modificarContrato(indice, 'N', contrato.estado)}" update="@this" />
+                                            </p:selectOneMenu>
+                                        </f:facet>  
+                                    </p:cellEditor> 
                                 </p:column>
                             </p:dataTable> 
                         </fieldset>
@@ -150,7 +159,7 @@
                         <p:commandButton style="position: absolute; left: 745px; top: 378px;" disabled="#{controlLegislacion.mostrarTodos}" id="mostrarTodos" actionListener="#{controlLegislacion.mostrarTodosContratos()}" value="#{msg['mostrar']}"  process="@this" />
 
                         <p:commandButton style="position: absolute; left: 683px; top: 500px;" id="ACEPTAR" value="#{msg['aceptar']}"  icon="ui-icon-check" actionListener="#{controlLegislacion.dispararDialogoConfirmarGuardar()}" disabled="#{controlLegislacion.guardado}"  process="@this" />
-                        <p:commandButton style="position: absolute; left: 775px; top: 500px;" id="ATRAS" value="#{msg['cancelar']}"  icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlLegislacion.refrescar()}" action="#{controlLegislacion.redirigir()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 775px; top: 500px;" id="ATRAS" value="#{msg['cancelar']}"  icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlLegislacion.Salir()}" action="#{controlLegislacion.redirigir()}" process="@this" />
                     </p:panel>
                     <p:hotkey bind="ctrl+f11" actionListener="#{controlLegislacion.activarCtrlF11()}"/>
                 </h:form>
@@ -176,6 +185,7 @@
                             <p:inputText id="nuevaDescripcionTipoCotizante" value="#{controlLegislacion.nuevoContrato.tipocotizante.descripcion}" style="width: 118px; position: absolute; left: 180px; top: 130px; text-transform: uppercase" onclick="select();">
                                 <p:ajax event="click" listener="#{controlLegislacion.valoresBackupAutocompletar(1)}" />
                                 <p:ajax event="change" listener="#{controlLegislacion.autocompletarNuevoyDuplicado(controlLegislacion.nuevoContrato.tipocotizante.descripcion, 1)}" />
+                                <!--   />-->
                                 <p:ajax event="dblclick" listener="#{controlLegislacion.llamarLOVNuevo_Duplicado(1)}"/>
                             </p:inputText>
                             <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 308px; top: 130px;" actionListener="#{controlLegislacion.llamarLOVNuevo_Duplicado(1)}" icon="ui-icon-search" process="@this" />
@@ -230,43 +240,44 @@
                     </p:dialog>
 
                     <!-- LOV TIPOS COTIZANTES -->
-                    <p:dialog header="#{msg['tiposcotizantesTC']}"  widgetVar="tiposCotizantesDialogo" draggable="false" resizable="false" closable="false" id="tiposCotizantesDialogo"  
-                              showEffect="fade" hideEffect="fade" width="500" modal="true">
+                    <p:dialog header="#{msg['tiposcotizantesTC']}" widgetVar="tiposCotizantesDialogo" draggable="false" resizable="false" closable="false" id="tiposCotizantesDialogo"  
+                              showEffect="fade" width="500" height="360" modal="true" >
                         <p:dataTable id="lovTiposCotizantes" style="width: 470px" var="tipoCotizante" value="#{controlLegislacion.listaTiposCotizantes}" rowKey="#{tipoCotizante.secuencia}"
                                      selection="#{controlLegislacion.tipoCotizanteSeleccionado}" selectionMode="single" widgetVar="lovTiposCotizantes" scrollable="true" scrollWidth="485" scrollHeight="231"
-                                     filteredValue="#{controlLegislacion.filtradoListaTiposCotizantes}" emptyMessage="#{msg['lovvacio']}" >              
+                                     filteredValue="#{controlLegislacion.filtradoListaTiposCotizantes}" emptyMessage="#{msg['lovvacio']}">              
                             <p:ajax event="rowSelect" listener="#{controlLegislacion.activarAceptar()}" update=":formularioDialogos:aceptarTC"/>
                             <p:ajax event="rowDblselect" listener="#{controlLegislacion.actualizarTipoCotizante()}" process="@this" />
                             <f:facet name="header">  
-                                <h:outputText value="#{msg['buscarTC']}"   style="position: absolute; left: 27px; top: 16px"/>  
+                                <h:outputText value="#{msg['buscarTC']}"  style="position: absolute; left: 27px; top: 16px"/>  
                                 <p:inputText id="globalFilter" onkeyup="lovTiposCotizantes.filter();" style="width:200px; position: relative; left: 30px;" />  
+                                <p:watermark for="globalFilter" value="" />
                             </f:facet>
                             <p:column filterBy="#{tipoCotizante.codigo}" width="50" filterMatchMode="contains" filterStyle="width: 40px">
                                 <f:facet name="header">
-                                    <h:outputText value="#{msg['codigoTC']}"  />
+                                    <h:outputText style="text-align: center" value="#{msg['codigoTC']}" />
                                 </f:facet>
                                 <h:outputText  value="#{tipoCotizante.codigo}" />
                             </p:column>
-                            <p:column filterBy="#{tipoCotizante.descripcion}" filterMatchMode="contains" >
+                            <p:column filterBy="#{tipoCotizante.descripcion}"  filterMatchMode="contains">
                                 <f:facet name="header">
-                                    <h:outputText value="#{msg['descripcionTC']}"  />
+                                    <h:outputText value="#{msg['descripcionTC']}" />
                                 </f:facet>
-                                <h:outputText  value="#{tipoCotizante.descripcion}" />
+                                <h:outputText value="#{tipoCotizante.descripcion}" />
                             </p:column>
                         </p:dataTable>
 
-                        <h:outputText id="infoRegistroTipo" value="#{controlLegislacion.infoRegistroTipo}" style="position: absolute; left: 20px; top: 330px; font-weight: bold"/>
+                        <p:commandButton id="aceptarTC" style="position: relative; left: 305px; top: 10px" value="#{msg['aceptar']}" disabled="#{controlLegislacion.aceptar}" icon="ui-icon-check"  actionListener="#{controlLegislacion.actualizarTipoCotizante()}" process="@this" onclick="tiposCotizantesDialogo.hide()"/>
 
-                        <p:commandButton icon="ui-icon-check" id="aceptarTC" style="position: relative; left: 305px" value="#{msg['aceptar']}"  disabled="#{controlLegislacion.aceptar}" actionListener="#{controlLegislacion.actualizarTipoCotizante()}" process="@this" />
+                        <p:commandButton id="atrasTC" style="position: relative; left: 305px; top: 10px" value="#{msg['atras']}"  icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlLegislacion.cancelarTipoCotizante()}"  process="@this" onclick="tiposCotizantesDialogo.hide()"/>    
 
-                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" id="atrasTC" style="position: relative; left: 305px" value="#{msg['atras']}"  actionListener="#{controlLegislacion.cancelarTipoCotizante()}" process="@this" />
+                        <h:outputText id="infoRegistroMotivos" value="#{controlLegislacion.infoRegistroTipo}" style="position: absolute; left: 20px; top: 330px; font-weight: bold"/>
 
-                    </p:dialog>
+                    </p:dialog>             
 
 
                     <!-- LOV CONTRATOS -->
                     <p:dialog header="#{msg['contratosC']}"  widgetVar="ContratosDialogo" draggable="false" resizable="false" closable="false" id="ContratosDialogo"  
-                              showEffect="fade" hideEffect="fade" width="541" modal="true" >
+                              showEffect="fade" hideEffect="fade" width="541" height="370" modal="true" >
                         <p:dataTable id="lovContratos" style="width: 510px" var="contratoLOV" value="#{controlLegislacion.listaContratoLOV}" rowKey="#{contratoLOV.secuencia}"
                                      selection="#{controlLegislacion.contratoSeleccionado}" selectionMode="single" widgetVar="lovContratos" scrollable="true" scrollWidth="525" scrollHeight="250"
                                      filteredValue="#{controlLegislacion.filtradoListaContratosLOV}" emptyMessage="#{msg['lovvacio']}" >              
@@ -292,9 +303,9 @@
 
                         <h:outputText id="infoRegistroContrato" value="#{controlLegislacion.infoRegistroContrato}" style="position: absolute; left: 20px; top: 355px; font-weight: bold"/>
 
-                        <p:commandButton icon="ui-icon-check" id="aceptarC" style="position: relative; left: 350px" value="#{msg['aceptar']}"  disabled="#{controlLegislacion.aceptar}" actionListener="#{controlLegislacion.seleccionContrato()}" process="@this" />
+                        <p:commandButton icon="ui-icon-check" id="aceptarC" style="position: relative; left: 350px; top: 10px" value="#{msg['aceptar']}"  disabled="#{controlLegislacion.aceptar}" actionListener="#{controlLegislacion.seleccionContrato()}" process="@this" />
 
-                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" id="atrasC" style="position: relative; left: 350px" value="#{msg['atras']}"  actionListener="#{controlLegislacion.cancelarSeleccionContrato()}"  process="@this" />
+                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" id="atrasC" style="position: relative; left: 350px; top: 10px" value="#{msg['atras']}"  actionListener="#{controlLegislacion.cancelarSeleccionContrato()}"  process="@this" />
 
                     </p:dialog>
 
@@ -319,16 +330,16 @@
                         <p:commandButton value="#{msg['cancelar']}" onclick="confirmarGuardar.hide();" style="position: absolute; top: 50px; left: 315px" process="@this" icon="ui-icon-arrowreturnthick-1-w" />
                     </p:dialog>
 
-                    <p:dialog id="validacionReproducirContratoClon" header="#{msg['atencion']}"  widgetVar="validacionReproducirContratoClon"  resizable="false" draggable="false" modal="true" height="95" width="400px" closable="false">  
+                    <p:dialog id="validacionReproducirContratoClon" header="#{msg['atencion']}"  widgetVar="validacionReproducirContratoClon"  resizable="false" draggable="false" modal="true" height="95" width="300px" closable="false">  
                         <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
-                        <h:outputText value="#{msg['validacionReproducirContratoClon']} #{controlLegislacion.mensajeValidacion}" style="position: absolute; left: 100px; top: 20px; width: 300px;" />
-                        <p:commandButton value="#{msg['aceptar']}"  onclick="validacionReproducirContratoClon.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
+                        <h:outputText value="#{msg['validacionReproducirContratoClon']} #{controlLegislacion.mensajeValidacion}" style="position: absolute; left: 100px; top: 20px; width: 200px;" />
+                        <p:commandButton value="#{msg['aceptar']}"  onclick="validacionReproducirContratoClon.hide();" style="position: absolute; top: 60px; left: 200px" process="@this" />
                     </p:dialog>
-                    
-                    <p:dialog id="validacionReproducirContratOrigen" header="#{msg['atencion']}"  widgetVar="validacionReproducirContratOrigen"  resizable="false" draggable="false" modal="true" height="95" width="400px" closable="false">  
+
+                    <p:dialog id="validacionReproducirContratOrigen" header="#{msg['atencion']}"  widgetVar="validacionReproducirContratOrigen"  resizable="false" draggable="false" modal="true" height="95" width="300px" closable="false">  
                         <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
-                        <h:outputText value="#{msg['validacionReproducirContratOrigen']} #{controlLegislacion.mensajeValidacion}" style="position: absolute; left: 100px; top: 20px; width: 300px;" />
-                        <p:commandButton value="#{msg['aceptar']}"  onclick="validacionReproducirContratOrigen.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
+                        <h:outputText value="#{msg['validacionReproducirContratOrigen']} #{controlLegislacion.mensajeValidacion}" style="position: absolute; left: 100px; top: 20px; width: 200px;" />
+                        <p:commandButton value="#{msg['aceptar']}"  onclick="validacionReproducirContratOrigen.hide();" style="position: absolute; top: 60px; left: 200px" process="@this" />
                     </p:dialog>
 
                     <!-- EDITOR -->
