--- a/DesignerRHN/DesignerRHN-war/web/grupoconcepto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/grupoconcepto.xhtml
@@ -264,7 +264,8 @@
 
                         <p:commandButton style="position: absolute; left: 722px; top: 470px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" value="#{msg['aceptar']}"  disabled="#{controlGrupoConcepto.cambiosPagina}" onclick="confirmarGuardar.show();" update=":form:datosGruposConceptos" process="@this" />
                         <p:commandButton style="position: absolute; left: 15px; top: 470px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-refresh" id="REFRESCAR" value="#{msg['refrescar']}" actionListener="#{controlGrupoConcepto.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 805px; top: 470px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="#{msg['atras']}"  actionListener="#{controlGrupoConcepto.salir()}" action="individual" process="@this" /> 
+                        <!--<p:commandButton style="position: absolute; left: 805px; top: 470px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="#{msg['atras']}"  actionListener="#{controlGrupoConcepto.salir()}" action="individual" process="@this" />--> 
+                        <p:commandButton style="position: absolute; left: 805px; top: 470px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="#{msg['atras']}"  actionListener="#{controlGrupoConcepto.salir()}" action="#{controlGrupoConcepto.volverPaginaAnterior()}" process="@this" /> 
 
                     </p:panel>
                 </h:form>
